fix layout issues

--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,6 @@ ul {
 .article-thumb {
     grid-column: 1 / -1;
     padding-bottom: 15px;
-    height: 371px;
 }
 
 .thumb-image {
@@ -108,16 +107,18 @@ ul {
 
 .thumb-image > img {
     max-width: 100vw;
+    max-height: 371px;
 }
 
 .thumb-text {
-    padding-left: 3rem;
-    padding-right: 3rem;
-    font-weight: 300;
-    font-size: 1.2rem;
-    line-height: 1.2em;
-    max-width: 660px;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  font-weight: 300;
+  font-size: 1.2rem;
+  line-height: 1.2em;
+  max-width: 660px;
 }
+
 
 .thumb-title h3 {
   font-weight: 400;
@@ -147,8 +148,14 @@ ul {
   padding-right: 15px;
 }
 
+.carousel {
+  padding-left: 25px;
+}
+
 .carousel-header {
-    grid-column: 2 / span 1;
+    grid-column: 1 / -1;
+    font-size: 1.4rem;
+    font-weight: 400;
 }
 
 .scrolling-wrapper {
@@ -312,22 +319,8 @@ p {
   font-weight: 400;
 }
 
-.carousel-header h2 {
-  font-size: 1.4rem;
-  font-weight: 400;
-}
-
 .right-column {
   display: none;
-  grid-column: 4 / -1;
-}
-
-.sub-chevron {
-  opacity: 0.4;
-  padding-left: 10px;
-}
-
-.right-column {
   grid-column: 4 / -2;
   grid-row: 1 / 1;
   display: grid;
@@ -336,7 +329,10 @@ p {
   display: none;
 }
 
-
+.sub-chevron {
+  opacity: 0.4;
+  padding-left: 10px;
+}
 
 @media (min-width: 758px) {
 
@@ -350,7 +346,7 @@ p {
   max-width: 660px;
 }
 
-.thumb-text {
+.thumb-text-1 {
   padding-left: 3.1rem;
 }
 
@@ -390,14 +386,6 @@ p {
     grid-template-columns: minmax(min-content, 600px) 1fr 1fr;
   }
 
-  .article-thumb-1 {
-    grid-row: 4 / 5;
-  }
-
-  .article-thumb-2 {
-    grid-row: 7 / 8;
-  }
-
   .thumb-image {
     grid-column: 1 / span 1;
     grid-row: 1 / 1;
@@ -405,7 +393,6 @@ p {
   }
 
   .thumb-text {
-    grid-row: 1 / 1;
     grid-column: 2 / span 1;
     display: flex;
     justify-content: center;
@@ -435,6 +422,10 @@ p {
   .thumb-category h4 {
     font-size: 0.7rem;
     line-height: 1rem;
+  }
+
+  .carousel {
+    padding-left: 0;
   }
   
   }
